Fixed bug #72508 (strange references after recursive function call and "switch" statement)